# trappist

./: .env.sample  .gitignore  .mcp.json  CLAUDE.md  alpaca-py-getting-started.md  pending_protections.json  plan-claude-trading-v2.md  playbook-serverless-scaleway.md  pyproject.toml  run.sh  setup.sh
.claude/: settings.json
.claude/agents/: auto-improve-analyst.md  bearish-researcher.md  bullish-researcher.md  discover-markets.md  macro-analyst.md  market-scout.md  risk-manager.md  sentiment-analyst.md  swing-selector.md  technical-analyst.md  trade-executor.md  trade-reporter.md  trading-final-selector.md
.claude/commands/: auto-improve.md  evolve.md  kill.md  make-profitables-trades.md  status.md  trade.md
.claude/hooks/: notification.py  pre_compact.py  pre_tool_use.py  risk_guardian.py  session_start.py  stop.py  subagent_stop.py  user_prompt_submit.py
.cursor/: mcp.json
.github/workflows/: ci.yml
deploy/: Dockerfile  aliases.sh  create-jobs.sh  setup-local-env.sh
deploy/config/: settings.json
deploy/scripts/: entrypoint.sh  inject-oauth-env.sh  reauth.sh
plugins/agents-crypto-trading/.claude-plugin/: plugin.json
plugins/quant-trading-system/: README.md
plugins/quant-trading-system/.claude-plugin/: plugin.json
plugins/quant-trading-system/agents/: risk-manager.md
plugins/quant-trading-system/commands/: ccxt-exchange.md  metrics-write.md
plugins/quant-trading-system/hooks/: circuit_breaker.sh  guard_approve.sh  kill_switch.sh  post_trade.sh  pre_trade.sh
plugins/quant-trading-system/workflows/: crypto-trader.md  quant-trading-workflow.md
tests/: conftest.py  test_categories.py  test_executor.py  test_indicators.py  test_protector.py  test_risk_guardian.py  test_sectors.py
trading/: SDK_REFERENCE.md  __init__.py  analyzer.py  categories.py  client.py  collector.py  diagnostics.py  discord.py  executor.py  indicators.py  protector.py  sectors.py
