[project]
name = "trappist"
version = "2.0.0"
description = "AI-powered crypto futures trading bot — CCXT + Binance Futures + Claude Code orchestration"
requires-python = ">=3.10"
dependencies = [
    "ccxt>=4.4.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
include = ["trading*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402"]

[tool.ruff.lint.per-file-ignores]
"trading/indicators.py" = ["E741"]  # l = low is clear in context

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
